docs/api/qiskit/0.19/qiskit.quantum_info.Quaternion.md
---
title: Quaternion
description: API reference for qiskit.quantum_info.Quaternion
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Quaternion
---

# Quaternion

<span id="qiskit.quantum_info.Quaternion" />

`Quaternion(data)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

A class representing a Quaternion.

## Methods

### \_\_call\_\_

<span id="qiskit.quantum_info.Quaternion.__call__" />

`Quaternion.__call__(idx)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

Call self as a function.

### \_\_mul\_\_

<span id="qiskit.quantum_info.Quaternion.__mul__" />

`Quaternion.__mul__(r)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

### from\_axis\_rotation

<span id="qiskit.quantum_info.Quaternion.from_axis_rotation" />

`classmethod Quaternion.from_axis_rotation(angle, axis)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

Return quaternion for rotation about given axis.

**Parameters**

*   **angle** (*float*) – Angle in radians.
*   **axis** (*str*) – Axis for rotation

**Returns**

Quaternion for axis rotation.

**Return type**

[Quaternion](qiskit.quantum_info.Quaternion "qiskit.quantum_info.Quaternion")

**Raises**

**ValueError** – Invalid input axis.

### from\_euler

<span id="qiskit.quantum_info.Quaternion.from_euler" />

`classmethod Quaternion.from_euler(angles, order='yzy')` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

Generate a quaternion from a set of Euler angles.

**Parameters**

*   **angles** (*array\_like*) – Array of Euler angles.
*   **order** (*str*) – Order of Euler rotations. ‘yzy’ is default.

**Returns**

Quaternion representation of Euler rotation.

**Return type**

[Quaternion](qiskit.quantum_info.Quaternion "qiskit.quantum_info.Quaternion")

### norm

<span id="qiskit.quantum_info.Quaternion.norm" />

`Quaternion.norm()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

Norm of quaternion.

### normalize

<span id="qiskit.quantum_info.Quaternion.normalize" />

`Quaternion.normalize(inplace=False)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

Normalizes a Quaternion to unit length so that it represents a valid rotation.

**Parameters**

**inplace** (*bool*) – Do an inplace normalization.

**Returns**

Normalized quaternion.

**Return type**

[Quaternion](qiskit.quantum_info.Quaternion "qiskit.quantum_info.Quaternion")

### to\_matrix

<span id="qiskit.quantum_info.Quaternion.to_matrix" />

`Quaternion.to_matrix()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

Converts a unit-length quaternion to a rotation matrix.

**Returns**

Rotation matrix.

**Return type**

ndarray

### to\_zyz

<span id="qiskit.quantum_info.Quaternion.to_zyz" />

`Quaternion.to_zyz()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py "view source code")

Converts a unit-length quaternion to a sequence of ZYZ Euler angles.

**Returns**

Array of Euler angles.

**Return type**

ndarray

